Add -B ${HOME} to apptainer runOptions
Newer versions of Nextflow default to using --no-home with apptainer, which is good for isolation and reproducibility, but breaks some containers (eg Quarto) that assume they can write to ~/.cache, ~/.local, ~/.jupyter etc. Rather than add many specific -B binds, we re-bind ${HOME} to restore legacy behaviour. The alternative would be to set the environment variable NXF_APPTAINER_HOME_MOUNT=true

--- a/conf/platforms/m3-bdi.config
+++ b/conf/platforms/m3-bdi.config
@@ -186,8 +186,6 @@ apptainer {
     pullTimeout = 3.hours
 
     // --nv to enable NVIDIA GPU support
-    runOptions = '--nv -B /scratch2 -B /fs04'
-    // To override the default --no-home flag without using NXF_APPTAINER_HOME_MOUNT=true
-    // -B ${HOME}
+    runOptions = "--nv --cleanenv -B ${HOME} -B /scratch2 -B /fs04"
     envWhitelist = ['BOLTZ_CACHE']
 }
