--- a/conf/platforms/m3.config
+++ b/conf/platforms/m3.config
@@ -176,12 +176,9 @@ apptainer {
     autoMounts = true
     pullTimeout = 3.hours
 
-    // --nv to enable NVIDIA GPU support
+    // --nv to enable NVIDIA GPU support    
+    runOptions = "--nv --cleanenv -B ${HOME} -B /scratch2 -B /fs04"
     // runOptions = "--nv -B /scratch2 -B /fs04 -B /mnt/reference2/alphafold/alphafold_20240229:/app/dl_binder_design/af2_initial_guess/model_weights"
     // -B ${params.models_basepath}:/models
-
-    runOptions = '--nv -B /scratch2 -B /fs04'
-    // To override the default --no-home flag without using NXF_APPTAINER_HOME_MOUNT=true
-    // -B ${HOME}
     envWhitelist = ['BOLTZ_CACHE']
 }
