--- a/nextflow.config
+++ b/nextflow.config
@@ -124,9 +124,9 @@ apptainer {
     autoMounts = true
     pullTimeout = 3.hours
     // --nv to enable NVIDIA GPU support
-    runOptions = '--nv --cleanenv'
-    // To override the default --no-home flag without using NXF_APPTAINER_HOME_MOUNT=true
-    // -B ${HOME}
+    // We add -B ${HOME} to ensure the home directory is available (since Nextflow now uses --no-home by default)
+    // The alternative is to set the NXF_APPTAINER_HOME_MOUNT=true environment variable
+    runOptions = '--nv --cleanenv -B ${HOME}'
     // runOptions = '--nv -B ${projectDir}/models/af2_initial_guess:/app/dl_binder_design/af2_initial_guess/model_weights'
 }
 
