--- a/conf/platforms/mlerp.config
+++ b/conf/platforms/mlerp.config
@@ -173,8 +173,7 @@ apptainer {
     autoMounts = true
     pullTimeout = 3.hours
     // --nv to enable NVIDIA GPU support
-    runOptions = '--nv -B /mnt/userdata2 -B /mnt/userdata3 -B /mnt/userdata4'
-    // To override the default --no-home flag without using NXF_APPTAINER_HOME_MOUNT=true
-    // -B ${HOME}
-    // runOptions = "--nv -B /mnt/userdata2 -B /mnt/userdata3 -B ${projectDir}/models/af2_initial_guess:/app/dl_binder_design/af2_initial_guess/model_weights"
+    runOptions = "--nv --cleanenv -B ${HOME} -B /mnt/userdata2 -B /mnt/userdata3 -B /mnt/userdata4"
+    // "-B ${projectDir}/models/af2_initial_guess:/app/dl_binder_design/af2_initial_guess/model_weights"
+    // '-B /home/andrewpe/projects/apdi/alphafold/2022-12-06/model_weights:/app/dl_binder_design/af2_initial_guess/model_weights'
 }
