--- a/conf/platforms/rotibom-hyperqueue.config
+++ b/conf/platforms/rotibom-hyperqueue.config
@@ -112,7 +112,8 @@ apptainer {
     autoMounts = true
     pullTimeout = 3.hours
     // --nv to enable NVIDIA GPU support
-    runOptions = "--nv -B ${projectDir}/models/af2_initial_guess/model_weights:/app/dl_binder_design/af2_initial_guess/model_weights"
+    runOptions = "--nv --cleanenv -B ${HOME}"
+    //runOptions = "--nv -B ${projectDir}/models/af2_initial_guess/model_weights:/app/dl_binder_design/af2_initial_guess/model_weights"
 }
 
 docker {
