--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -26,4 +26,4 @@ jobs:
             mkdocs-material-
       - run: pip install mkdocs-macros-plugin
       #- run: pip install mkdocs-material
-      - run: cd doc && mkdocs gh-deploy --force
+      - run: cd docs && mkdocs gh-deploy --force
