--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,6 +24,5 @@ jobs:
           path: ~/.cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install mkdocs-macros-plugin
-      #- run: pip install mkdocs-material
+      #- run: pip install mkdocs-material mkdocs-macros-plugin
       - run: cd docs && mkdocs gh-deploy --force
