--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,5 +24,6 @@ jobs:
           path: ~/.cache
           restore-keys: |
             mkdocs-material-
+      - run: pip install mkdocs
       #- run: pip install mkdocs-material mkdocs-macros-plugin
       - run: cd docs && mkdocs gh-deploy --force
