Update config and docs to use -profile for site-specifc configurations

--- a/conf/platforms/m3_bdi.config
+++ b/conf/platforms/m3_bdi.config
@@ -111,10 +111,10 @@ process {
         accelerator = 1
 
         // H100-80G
-        clusterOptions = "--gres=gpu:1 --partition=m3h --qos=m3h ${account_option}"
+        //clusterOptions = "--gres=gpu:1 --partition=m3h --qos=m3h ${account_option}"
         
         // BDI: A100/A40
-        //clusterOptions = "--gres=gpu:1 --partition=bdi --qos=bdiq ${account_option}" 
+        clusterOptions = "--gres=gpu:1 --partition=bdi --qos=bdiq ${account_option}" 
 
         time = 2.hours
 
