--- a/nextflow.grumpus.config
+++ b/nextflow.grumpus.config
@@ -1,16 +1,18 @@
 manifest {
     name            = 'nf-binder-design'
-    author          = '''Andrew Perry'''
+    author          = """Andrew Perry"""
     homePage        = 'https://github.com/Australian-Protein-Design-Initiative/nf-binder-design'
-    description     = '''Protein binder design pipeline'''
+    description     = """Protein binder design pipeline"""
     mainScript      = 'main.nf'
     nextflowVersion = '!>=23.04.0'
-    version         = '0.1.4'
+    version         = '0.1.1'
     defaultBranch   = 'main'
-// doi             = 'TBD'
+    // doi             = 'TBD'
 }
 
 params {
+    models_basepath = "${projectDir}/models"
+    
     // GPU-related parameters used across multiple modules
     require_gpu = true
     gpu_devices = ''
@@ -31,10 +33,6 @@ process {
 
     withName: RENUMBER_RESIDUES {
         //container = params.containers.renumber_residues
-        executor = 'local'
-    }
-
-    withName: FILTER_DESIGNS {
         executor = 'local'
     }
 
@@ -60,19 +58,20 @@ process {
         memory = '8g' // '8g' is probably enough
         cpus = 2
     }
-
+    
     withName: DL_BINDER_DESIGN_PROTEINMPNN {
         //container = params.containers.dl_binder_design_proteinmpnn
-
+        
         // Since this is effectively CPU only and quick, we probably can also just
         // run it on the local node
         //accelerator = 1
+
 
         time = 30.minutes
         memory = '4g'
         cpus = 1
     }
-
+    
     withName: AF2_INITIAL_GUESS {
         //container = params.containers.af2_initial_guess
 
@@ -82,39 +81,14 @@ process {
         cpus = 4
     }
 
-    withName: CREATE_BOLTZ_YAML {
-        executor = 'local'
-    }
-
-    withName: PARSE_BOLTZ_CONFIDENCE_JSON {
-        executor = 'local'
-    }
-
-    withName: MMSEQS_COLABFOLDSEARCH {
-        time = 4.hours
-        memory = '32g'
-        cpus = 8
-    }
-
     withName: BOLTZ {
         accelerator = 1
         time = 2.hours
         memory = '8g'
         cpus = 2
-
-    // if using CPU only
-    // ext.args = "--accelerator cpu"
-    }
-
-    withName: BINDCRAFT_CREATE_SETTINGS {
-        executor = 'local'
-    }
-
-    withName: BINDCRAFT {
-        accelerator = 1
-        time = 2.hours
-        memory = '16g'
-        cpus = 8
+        
+        // if using CPU only
+        // ext.args = "--accelerator cpu"
     }
 }
 
@@ -124,15 +98,11 @@ apptainer {
     autoMounts = true
     pullTimeout = 3.hours
     // --nv to enable NVIDIA GPU support
-    // We add -B ${HOME} to ensure the home directory is available (since Nextflow now uses --no-home by default)
-    // The alternative is to set the NXF_APPTAINER_HOME_MOUNT=true environment variable
-    runOptions = '--nv --cleanenv -B ${HOME}'
+    runOptions = '--nv --cleanenv'
     // runOptions = '--nv -B ${projectDir}/models/af2_initial_guess:/app/dl_binder_design/af2_initial_guess/model_weights'
 }
 
 docker {
-    enabled = false
-
     // --gpus all to enable NVIDIA GPU support
     // enabled = true
     runOptions = '--gpus all'
@@ -142,11 +112,8 @@ profiles {
     local {
         executor {
             name = 'local'
-            // this should be overridden for workstations with multiple GPUs to allow more than
-            // one simultaneous task.
             queueSize = 1
             pollInterval = '30 sec'
-            submitRateLimit = '1/10sec'
         }
         process {
             executor = 'local'
@@ -175,7 +142,6 @@ profiles {
             name = 'hq'
             queueSize = 900
             pollInterval = '5 sec'
-            submitRateLimit = '1/10sec'
         }
         process {
             executor = 'hq'
@@ -183,25 +149,5 @@ profiles {
             maxRetries = 0
             cache = 'lenient'
         }
-    }
-
-    ////
-    //   Platform-specific configurations - add additional HPC clusters and cloud platforms here
-    ////
-
-    m3 {
-        includeConfig "${projectDir}/conf/platforms/m3.config"
-    }
-    m3_bdi {
-        includeConfig "${projectDir}/conf/platforms/m3_bdi.config"
-    }
-    mlerp {
-        includeConfig "${projectDir}/conf/platforms/mlerp.config"
-    }
-    rotibom_hyperqueue {
-        includeConfig "${projectDir}/conf/platforms/rotibom_hyperqueue.config"
-    }
-    hyperqueue {
-        includeConfig "${projectDir}/conf/platforms/hyperqueue.config"
     }
 }
