Reduce default BINDCRAFT cores and memory
These values better reflect real usage observed in runs (with headroom)

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,13 +1,12 @@
 manifest {
-    name            = 'nf-binder-design'
-    author          = '''Andrew Perry'''
-    homePage        = 'https://github.com/Australian-Protein-Design-Initiative/nf-binder-design'
-    description     = '''Protein binder design pipeline'''
-    mainScript      = 'main.nf'
+    name = 'nf-binder-design'
+    author = '''Andrew Perry'''
+    homePage = 'https://github.com/Australian-Protein-Design-Initiative/nf-binder-design'
+    description = '''Protein binder design pipeline'''
+    mainScript = 'main.nf'
     nextflowVersion = '!>=23.04.0'
-    version         = '0.1.4'
-    defaultBranch   = 'main'
-// doi             = 'TBD'
+    version = '0.1.4'
+    defaultBranch = 'main'
 }
 
 params {
@@ -25,12 +24,10 @@ process {
     cache = 'lenient'
 
     withName: GET_CONTIGS {
-        //container = params.containers.get_contigs
         executor = 'local'
     }
 
     withName: RENUMBER_RESIDUES {
-        //container = params.containers.renumber_residues
         executor = 'local'
     }
 
@@ -39,43 +36,30 @@ process {
     }
 
     withName: COMBINE_SCORES {
-        //container = params.containers.combine_scores
         executor = 'local'
     }
 
     withName: RFDIFFUSION {
-        //container = params.containers.rfdiffusion
         accelerator = 1
         time = 24.hours
-
-        memory = '8g' // '8g' is probably enough
+        memory = '8g'
         cpus = 2
     }
 
     withName: RFDIFFUSION_PARTIAL {
-        //container = params.containers.rfdiffusion
         accelerator = 1
         time = 24.hours
-
-        memory = '8g' // '8g' is probably enough
+        memory = '8g'
         cpus = 2
     }
 
     withName: DL_BINDER_DESIGN_PROTEINMPNN {
-        //container = params.containers.dl_binder_design_proteinmpnn
-
-        // Since this is effectively CPU only and quick, we probably can also just
-        // run it on the local node
-        //accelerator = 1
-
         time = 30.minutes
         memory = '4g'
         cpus = 1
     }
 
     withName: AF2_INITIAL_GUESS {
-        //container = params.containers.af2_initial_guess
-
         accelerator = 1
         time = 30.minutes
         memory = '16g'
@@ -101,9 +85,6 @@ process {
         time = 2.hours
         memory = '8g'
         cpus = 2
-
-    // if using CPU only
-    // ext.args = "--accelerator cpu"
     }
 
     withName: BINDCRAFT_CREATE_SETTINGS {
@@ -114,7 +95,7 @@ process {
         accelerator = 1
         time = 2.hours
         memory = '16g'
-        cpus = 8
+        cpus = 2
     }
 }
 
@@ -127,7 +108,6 @@ apptainer {
     // We add -B ${HOME} to ensure the home directory is available (since Nextflow now uses --no-home by default)
     // The alternative is to set the NXF_APPTAINER_HOME_MOUNT=true environment variable
     runOptions = '--nv --cleanenv -B ${HOME}'
-    // runOptions = '--nv -B ${projectDir}/models/af2_initial_guess:/app/dl_binder_design/af2_initial_guess/model_weights'
 }
 
 docker {
