Add configs for new process names

--- a/conf/platforms/m3.config
+++ b/conf/platforms/m3.config
@@ -41,6 +41,10 @@ process {
         executor = 'local'
     }
 
+    withName: AF2IG_SCORE_FILTER {
+        executor = 'local'
+    }
+
     withName: COMBINE_SCORES {
         //container = params.containers.combine_scores
         executor = 'local'
@@ -139,6 +143,35 @@ process {
     }
 
     withName: BOLTZ {
+        accelerator = 1
+
+        // GPU partition
+        clusterOptions = '--gres=gpu:1 --partition=gpu' + (params.slurm_account ? " --account=${params.slurm_account} " : '')
+
+        // BDI: A100/A40
+        //clusterOptions = "--gres=gpu:1 --partition=bdi --qos=bdiq" + (params.slurm_account ? " --account=${params.slurm_account} " : '')
+
+        time = 1.hours
+        memory = '64g'
+        cpus = 2
+    }
+
+
+    withName: BOLTZ_COMPARE_COMPLEX {
+        accelerator = 1
+
+        // GPU partition
+        clusterOptions = '--gres=gpu:1 --partition=gpu' + (params.slurm_account ? " --account=${params.slurm_account} " : '')
+
+        // BDI: A100/A40
+        //clusterOptions = "--gres=gpu:1 --partition=bdi --qos=bdiq" + (params.slurm_account ? " --account=${params.slurm_account} " : '')
+
+        time = 1.hours
+        memory = '64g'
+        cpus = 2
+    }
+
+    withName: BOLTZ_COMPARE_BINDER_MONOMER {
         accelerator = 1
 
         // GPU partition
