--- a/conf/platforms/m3_bdi.config
+++ b/conf/platforms/m3_bdi.config
@@ -63,6 +63,10 @@ process {
         executor = 'local'
     }
 
+    withName: AF2IG_SCORE_FILTER {
+        executor = 'local'
+    }
+
     withName: COMBINE_SCORES {
         //container = params.containers.combine_scores
         executor = 'local'
@@ -145,6 +149,40 @@ process {
     }
 
     withName: BOLTZ {
+        accelerator = 1
+
+        // GPU partition
+        // clusterOptions = "--gres=gpu:1 --partition=gpu ${account_option}"
+        
+        // H100-80G
+        // clusterOptions = "--gres=gpu:1 --partition=m3h ${account_option}"
+        
+        // BDI: A100/A40
+        clusterOptions = "--gres=gpu:1 --partition=bdi --qos=bdiq ${account_option}"
+
+        time = 1.hours
+        memory = '64g'
+        cpus = 2
+    }
+
+    withName: BOLTZ_COMPARE_COMPLEX {
+        accelerator = 1
+
+        // GPU partition
+        // clusterOptions = "--gres=gpu:1 --partition=gpu ${account_option}"
+        
+        // H100-80G
+        // clusterOptions = "--gres=gpu:1 --partition=m3h ${account_option}"
+        
+        // BDI: A100/A40
+        clusterOptions = "--gres=gpu:1 --partition=bdi --qos=bdiq ${account_option}"
+
+        time = 1.hours
+        memory = '64g'
+        cpus = 2
+    }
+
+    withName: BOLTZ_COMPARE_BINDER_MONOMER {
         accelerator = 1
 
         // GPU partition
