--- a/conf/platforms/mlerp.config
+++ b/conf/platforms/mlerp.config
@@ -36,6 +36,10 @@ process {
         executor = 'local'
     }
 
+    withName: AF2IG_SCORE_FILTER {
+        executor = 'local'
+    }
+
     withName: COMBINE_SCORES {
         //container = params.containers.combine_scores
         executor = 'local'
@@ -135,6 +139,30 @@ process {
     // suitable for smaller targets
     //clusterOptions = '--gres=gpu:3g.20gb:1 --partition=BigCats --qos=lion'
     //time = 30.minutes
+    }
+    
+    withName: BOLTZ_COMPARE_COMPLEX {
+        accelerator = 1
+        cpus = 2
+
+        clusterOptions = '--gres=gpu:40gb:1 --partition=BigCats --qos=lion'
+        time = 1.hours
+
+        // suitable for smaller targets
+        //clusterOptions = '--gres=gpu:3g.20gb:1 --partition=BigCats --qos=lion'
+        //time = 30.minutes
+    }
+
+    withName: BOLTZ_COMPARE_BINDER_MONOMER {
+        accelerator = 1
+        cpus = 2
+
+        clusterOptions = '--gres=gpu:40gb:1 --partition=BigCats --qos=lion'
+        time = 1.hours
+
+        // suitable for smaller targets
+        //clusterOptions = '--gres=gpu:3g.20gb:1 --partition=BigCats --qos=lion'
+        //time = 30.minutes
     }
 
     withName: BINDCRAFT_CREATE_SETTINGS {
