--- a/conf/platforms/rotibom_hyperqueue.config
+++ b/conf/platforms/rotibom_hyperqueue.config
@@ -21,6 +21,10 @@ process {
         executor = 'local'
     }
 
+    withName: AF2IG_SCORE_FILTER {
+        executor = 'local'
+    }
+
     withName: COMBINE_SCORES {
         executor = 'local'
     }
@@ -70,6 +74,14 @@ process {
     }
 
     withName: BOLTZ {
+        clusterOptions = "--resource gpus/nvidia=1"
+        accelerator = null
+        time = 2.hours
+        memory = '8g'
+        cpus = 2
+    }
+
+    withName: 'BOLTZ_.*' {
         clusterOptions = "--resource gpus/nvidia=1"
         accelerator = null
         time = 2.hours
