--- a/nextflow.config
+++ b/nextflow.config
@@ -35,6 +35,10 @@ process {
         executor = 'local'
     }
 
+    withName: AF2IG_SCORE_FILTER {
+        executor = 'local'
+    }
+
     withName: COMBINE_SCORES {
         executor = 'local'
     }
@@ -81,6 +85,13 @@ process {
     }
 
     withName: BOLTZ {
+        accelerator = 1
+        time = 2.hours
+        memory = '8g'
+        cpus = 2
+    }
+
+    withName: 'BOLTZ_.*' {
         accelerator = 1
         time = 2.hours
         memory = '8g'
