boltzgen: initial working version

--- a/nextflow.config
+++ b/nextflow.config
@@ -108,6 +108,53 @@ process {
         memory = '16g'
         cpus = 2
     }
+
+    withName: BOLTZGEN_DESIGN {
+        accelerator = 1
+        time = 1.hours
+        memory = '32g'
+        cpus = 4
+    }
+
+    withName: BOLTZGEN_INVERSE_FOLDING {
+        accelerator = 1
+        time = 30.minutes
+        memory = '32g'
+        cpus = 4
+    }
+
+    withName: BOLTZGEN_FOLDING {
+        accelerator = 1
+        time = 4.hours
+        memory = '32g'
+        cpus = 4
+    }
+
+    withName: BOLTZGEN_DESIGN_FOLDING {
+        accelerator = 1
+        time = 4.hours
+        memory = '32g'
+        cpus = 4
+    }
+
+    withName: BOLTZGEN_MERGE {
+        executor = 'local'
+        time = 30.minutes
+        memory = '4g'
+        cpus = 1
+    }
+
+    withName: BOLTZGEN_ANALYSIS {
+        time = 4.hours
+        memory = '16g'
+        cpus = 4
+    }
+
+    withName: BOLTZGEN_FILTERING {
+        time = 30.minutes
+        memory = '8g'
+        cpus = 2
+    }
 }
 
 // Apptainer specific settings
