--- a/conf/platforms/m3.config
+++ b/conf/platforms/m3.config
@@ -204,54 +204,54 @@ process {
 
     withName: BOLTZGEN_DESIGN {
         accelerator = 1
-        time = 1.hours
-        memory = '32g'
-        cpus = 4
+        time = 30.minutes
+        memory = '16g'
+        cpus = 2
         clusterOptions = "--gres=gpu:1 --partition=gpu ${account_option}"
     }
 
     withName: BOLTZGEN_INVERSE_FOLDING {
         accelerator = 1
         time = 30.minutes
-        memory = '32g'
-        cpus = 4
+        memory = '8g'
+        cpus = 2
         clusterOptions = "--gres=gpu:1 --partition=gpu ${account_option}"
     }
 
     withName: BOLTZGEN_FOLDING {
         accelerator = 1
-        time = 4.hours
-        memory = '32g'
-        cpus = 4
+        time = 30.minutes
+        memory = '16g'
+        cpus = 2
         clusterOptions = "--gres=gpu:1 --partition=gpu ${account_option}"
     }
 
     withName: BOLTZGEN_DESIGN_FOLDING {
         accelerator = 1
-        time = 4.hours
-        memory = '32g'
-        cpus = 4
+        time = 30.minutes
+        memory = '16g'
+        cpus = 2
         clusterOptions = "--gres=gpu:1 --partition=gpu ${account_option}"
     }
 
     withName: BOLTZGEN_MERGE {
         executor = 'local'
         time = 30.minutes
-        memory = '4g'
+        memory = '1g'
         cpus = 1
     }
 
     withName: BOLTZGEN_ANALYSIS {
         time = 4.hours
-        memory = '16g'
-        cpus = 4
+        memory = '32g'
+        cpus = 2
         clusterOptions = "--gres=gpu:1 --partition=gpu ${account_option}"
     }
 
     withName: BOLTZGEN_FILTERING {
         time = 30.minutes
-        memory = '8g'
-        cpus = 2
+        memory = '4g'
+        cpus = 1
         clusterOptions = "--gres=gpu:1 --partition=gpu ${account_option}"
     }
 }
