--- a/nextflow.config
+++ b/nextflow.config
@@ -111,49 +111,50 @@ process {
 
     withName: BOLTZGEN_DESIGN {
         accelerator = 1
-        time = 1.hours
-        memory = '32g'
-        cpus = 4
+        time = 30.minutes
+        memory = '16g'
+        cpus = 2
     }
 
     withName: BOLTZGEN_INVERSE_FOLDING {
         accelerator = 1
         time = 30.minutes
-        memory = '32g'
-        cpus = 4
+        memory = '8g'
+        cpus = 2
     }
 
     withName: BOLTZGEN_FOLDING {
         accelerator = 1
-        time = 4.hours
-        memory = '32g'
-        cpus = 4
+        time = 30.minutes
+        memory = '16g'
+        cpus = 2
     }
 
     withName: BOLTZGEN_DESIGN_FOLDING {
         accelerator = 1
-        time = 4.hours
-        memory = '32g'
-        cpus = 4
+        time = 30.minutes
+        memory = '16g'
+        cpus = 2
     }
 
     withName: BOLTZGEN_MERGE {
         executor = 'local'
         time = 30.minutes
-        memory = '4g'
+        memory = '1g'
         cpus = 1
     }
 
     withName: BOLTZGEN_ANALYSIS {
+        accelerator = 1
         time = 4.hours
-        memory = '16g'
-        cpus = 4
+        memory = '32g'  // '8g' ?
+        cpus = 2
     }
 
     withName: BOLTZGEN_FILTERING {
         time = 30.minutes
-        memory = '8g'
-        cpus = 2
+        memory = '4g'
+        cpus = 1
     }
 }
 
