Fix m3.config - missing variable

--- a/conf/platforms/m3.config
+++ b/conf/platforms/m3.config
@@ -4,6 +4,8 @@
 
 params.slurm_account = false
 
+def account_option = (params.slurm_account ? " --account=${params.slurm_account} " : '')
+
 def random_choice(choices) {
     return choices[new Random().nextInt(choices.size())]
 }
