Add BoltzGen workflow
Merge branch 'boltzgen-vanilla'

--- a/conf/platforms/m3_bdi.config
+++ b/conf/platforms/m3_bdi.config
@@ -215,6 +215,59 @@ process {
         // BDI: A100/A40
         clusterOptions = "--gres=gpu:1 --partition=bdi --qos=bdiq ${account_option}"
     }
+
+    withName: BOLTZGEN_DESIGN {
+        accelerator = 1
+        time = 30.minutes
+        memory = '16g'
+        cpus = 2
+        clusterOptions = "--gres=gpu:1 --partition=bdi --qos=bdiq ${account_option}"
+    }
+
+    withName: BOLTZGEN_INVERSE_FOLDING {
+        accelerator = 1
+        time = 30.minutes
+        memory = '8g'
+        cpus = 2
+        clusterOptions = "--gres=gpu:1 --partition=bdi --qos=bdiq ${account_option}"
+    }
+
+    withName: BOLTZGEN_FOLDING {
+        accelerator = 1
+        time = 30.minutes
+        memory = '16g'
+        cpus = 2
+        clusterOptions = "--gres=gpu:1 --partition=bdi --qos=bdiq ${account_option}"
+    }
+
+    withName: BOLTZGEN_DESIGN_FOLDING {
+        accelerator = 1
+        time = 30.minutes
+        memory = '16g'
+        cpus = 2
+        clusterOptions = "--gres=gpu:1 --partition=bdi --qos=bdiq ${account_option}"
+    }
+
+    withName: BOLTZGEN_MERGE {
+        executor = 'local'
+        time = 30.minutes
+        memory = '1g'
+        cpus = 1
+    }
+
+    withName: BOLTZGEN_ANALYSIS {
+        time = 12.hours
+        memory = '64g'
+        cpus = 8
+        clusterOptions = "--gres=gpu:1 --partition=bdi --qos=bdiq ${account_option}"
+    }
+
+    withName: BOLTZGEN_FILTERING {
+        time = 30.minutes
+        memory = '4g'
+        cpus = 1
+        clusterOptions = "--gres=gpu:1 --partition=bdi --qos=bdiq ${account_option}"
+    }
 }
 
 // Apptainer specific settings
