--- a/conf/platforms/m3.config
+++ b/conf/platforms/m3.config
@@ -265,7 +265,7 @@ apptainer {
     pullTimeout = 3.hours
 
     // --nv to enable NVIDIA GPU support    
-    runOptions = "--nv --cleanenv -B ${HOME} -B /scratch2 -B /fs04"
+    runOptions = "--nv --cleanenv --env PYTHONNOUSERSITE=1 -B ${HOME} -B /scratch2 -B /fs04"
     // runOptions = "--nv -B /scratch2 -B /fs04 -B /mnt/reference2/alphafold/alphafold_20240229:/app/dl_binder_design/af2_initial_guess/model_weights"
     // -B ${params.models_basepath}:/models
     envWhitelist = ['BOLTZ_CACHE']
