Add BoltzGen config for MLeRP cluster.

--- a/conf/platforms/mlerp.config
+++ b/conf/platforms/mlerp.config
@@ -191,6 +191,60 @@ process {
                 '--gres=gpu:1 --partition=BigCats --qos=lion'
         }
     }
+
+    withName: BOLTZGEN_DESIGN {
+        accelerator = 1
+        time = 30.minutes
+        memory = '16g'
+        cpus = 2
+        clusterOptions = '--gres=gpu:3g.20gb:1 --partition=BigCats --qos=cheetah'
+    }
+
+    withName: BOLTZGEN_INVERSE_FOLDING {
+        accelerator = 1
+        time = 30.minutes
+        memory = '8g'
+        cpus = 2
+        clusterOptions = '--gres=gpu:2g.10gb:1 --partition=BigCats --qos=cheetah'
+    }
+
+    withName: BOLTZGEN_FOLDING {
+        accelerator = 1
+        time = 30.minutes
+        memory = '16g'
+        cpus = 2
+        clusterOptions = { task.attempt <= 1 ? "--gres=gpu:3g.20gb:1 --partition=BigCats --qos=cheetah" : 
+                                               '--gres=gpu:40gb:1 --partition=BigCats --qos=lion' }
+    }
+
+    withName: BOLTZGEN_DESIGN_FOLDING {
+        accelerator = 1
+        time = 30.minutes
+        memory = '16g'
+        cpus = 2
+        clusterOptions = "--gres=gpu:3g.20gb:1 --partition=BigCats --qos=cheetah"
+    }
+
+    withName: BOLTZGEN_MERGE {
+        executor = 'local'
+        time = 30.minutes
+        memory = '1g'
+        cpus = 1
+    }
+
+    withName: BOLTZGEN_ANALYSIS {
+        time = 12.hours
+        memory = '64g'
+        cpus = 8
+        clusterOptions = '--gres=gpu:2g.10gb:1 --partition=BigCats --qos=cheetah'
+    }
+
+    withName: BOLTZGEN_FILTERING {
+        time = 30.minutes
+        memory = '4g'
+        cpus = 1
+        clusterOptions = '--gres=gpu:2g.10gb:1 --partition=BigCats --qos=cheetah'
+    }
 }
 
 // Apptainer specific settings
