Fix MLeRP config for BOLTZGEN_ANALYSIS

--- a/conf/platforms/mlerp.config
+++ b/conf/platforms/mlerp.config
@@ -236,7 +236,7 @@ process {
         time = 12.hours
         memory = '64g'
         cpus = 8
-        clusterOptions = '--gres=gpu:3g.20gb:1 --partition=BigCats --qos=cheetah'
+        clusterOptions = '--gres=gpu:40gb:1 --partition=BigCats --qos=lion'
     }
 
     withName: BOLTZGEN_FILTERING {
