Explicitly add  ${projectDir}/bin and  ${projectDir}/assets to apptainer bindpaths.

--- a/nextflow.config
+++ b/nextflow.config
@@ -166,7 +166,7 @@ apptainer {
     // --nv to enable NVIDIA GPU support
     // We add -B ${HOME} to ensure the home directory is available (since Nextflow now uses --no-home by default)
     // The alternative is to set the NXF_APPTAINER_HOME_MOUNT=true environment variable
-    runOptions = '--nv --cleanenv --env PYTHONNOUSERSITE=1 -B ${HOME}'
+    runOptions = '--nv --cleanenv --env PYTHONNOUSERSITE=1 -B ${HOME}  -B ${projectDir}/assets -B ${projectDir}/bin'
 }
 
 docker {
