--- a/conf/platforms/rotibom_hyperqueue.config
+++ b/conf/platforms/rotibom_hyperqueue.config
@@ -108,7 +108,7 @@ apptainer {
     autoMounts = true
     pullTimeout = 3.hours
     // --nv to enable NVIDIA GPU support
-    runOptions = "--nv --cleanenv --env PYTHONNOUSERSITE=1 -B ${HOME}"
+    runOptions = "--nv --cleanenv --env PYTHONNOUSERSITE=1 -B ${HOME} -B ${projectDir}/assets -B ${projectDir}/bin"
 }
 
 docker {
