Add BoltzGen to hyperqueue configs
Also fix accelerator setting on BindCraft for these

--- a/conf/platforms/rotibom_hyperqueue.config
+++ b/conf/platforms/rotibom_hyperqueue.config
@@ -94,10 +94,65 @@ process {
     }
 
     withName: BINDCRAFT {
-        accelerator = 1
+        accelerator = null
         time = 2.hours
         memory = '16g'
         cpus = 2
+        clusterOptions = "--resource gpus/nvidia=1"
+    }
+
+    withName: BOLTZGEN_DESIGN {
+        accelerator = null
+        time = 30.minutes
+        memory = '16g'
+        cpus = 2
+        clusterOptions = "--resource gpus/nvidia=1"
+    }
+
+    withName: BOLTZGEN_INVERSE_FOLDING {
+        accelerator = null
+        time = 30.minutes
+        memory = '8g'
+        cpus = 2
+        clusterOptions = "--resource gpus/nvidia=1"
+    }
+
+    withName: BOLTZGEN_FOLDING {
+        accelerator = null
+        time = 30.minutes
+        memory = '16g'
+        cpus = 2
+        clusterOptions = "--resource gpus/nvidia=1"
+    }
+
+    withName: BOLTZGEN_DESIGN_FOLDING {
+        accelerator = null
+        time = 30.minutes
+        memory = '16g'
+        cpus = 2
+        clusterOptions = "--resource gpus/nvidia=1"
+    }
+
+    withName: BOLTZGEN_MERGE {
+        executor = 'local'
+        time = 30.minutes
+        memory = '1g'
+        cpus = 1
+    }
+
+    withName: BOLTZGEN_ANALYSIS {
+        accelerator = null
+        time = 12.hours
+        memory = '64g'
+        cpus = 8
+        clusterOptions = "--resource gpus/nvidia=1"
+    }
+
+    withName: BOLTZGEN_FILTERING {
+        accelerator = null
+        time = 30.minutes
+        memory = '4g'
+        cpus = 1
         clusterOptions = "--resource gpus/nvidia=1"
     }
 }
