--- a/conf/platforms/mlerp.config
+++ b/conf/platforms/mlerp.config
@@ -253,7 +253,7 @@ apptainer {
     autoMounts = true
     pullTimeout = 3.hours
     // --nv to enable NVIDIA GPU support
-    runOptions = "--nv --cleanenv --env PYTHONNOUSERSITE=1 -B ${HOME} -B ${projectDir}/assets -B ${projectDir}/bin -B /mnt/userdata2 -B /mnt/userdata3 -B /mnt/userdata4"
+    runOptions = "--nv --cleanenv --env PYTHONNOUSERSITE=1 -B \$HOME -B ${projectDir}/assets -B ${projectDir}/bin -B /mnt/userdata2 -B /mnt/userdata3 -B /mnt/userdata4"
     // "-B ${projectDir}/models/af2_initial_guess:/app/dl_binder_design/af2_initial_guess/model_weights"
     // '-B /home/andrewpe/projects/apdi/alphafold/2022-12-06/model_weights:/app/dl_binder_design/af2_initial_guess/model_weights'
 }
