--- a/conf/platforms/rotibom_hyperqueue.config
+++ b/conf/platforms/rotibom_hyperqueue.config
@@ -149,11 +149,9 @@ process {
     }
 
     withName: BOLTZGEN_FILTERING {
-        accelerator = null
         time = 30.minutes
         memory = '4g'
         cpus = 1
-        clusterOptions = "--resource gpus/nvidia=1"
     }
 }
 
@@ -163,7 +161,7 @@ apptainer {
     autoMounts = true
     pullTimeout = 3.hours
     // --nv to enable NVIDIA GPU support
-    runOptions = "--nv --cleanenv --env PYTHONNOUSERSITE=1 -B ${HOME} -B ${projectDir}/assets -B ${projectDir}/bin"
+    runOptions = "--nv --cleanenv --env PYTHONNOUSERSITE=1 -B \$HOME -B ${projectDir}/assets -B ${projectDir}/bin"
 }
 
 docker {
