Revet explicity bin/ and assets/ apptainer bind mounts in configs.

--- a/conf/platforms/hyperqueue.config
+++ b/conf/platforms/hyperqueue.config
@@ -150,7 +150,7 @@ apptainer {
     autoMounts = true
     pullTimeout = 3.hours
     // --nv to enable NVIDIA GPU support
-    runOptions = "--nv --cleanenv --env PYTHONNOUSERSITE=1 -B \$HOME -B ${projectDir}/assets -B ${projectDir}/bin"
+    runOptions = "--nv --cleanenv --env PYTHONNOUSERSITE=1 -B \$HOME"
 }
 
 docker {
