--- a/conf/platforms/m3_bdi.config
+++ b/conf/platforms/m3_bdi.config
@@ -277,6 +277,6 @@ apptainer {
     pullTimeout = 3.hours
 
     // --nv to enable NVIDIA GPU support
-    runOptions = "--nv --cleanenv --env PYTHONNOUSERSITE=1 -B \$HOME -B ${projectDir}/assets -B ${projectDir}/bin -B /scratch2 -B /fs04"
+    runOptions = "--nv --cleanenv --env PYTHONNOUSERSITE=1 -B \$HOME -B /scratch2 -B /fs04"
     envWhitelist = ['BOLTZ_CACHE']
 }
