Use new container and add config for BOLTZ_PULLDOWN_REPORTING

--- a/conf/platforms/hyperqueue.config
+++ b/conf/platforms/hyperqueue.config
@@ -64,6 +64,10 @@ process {
         executor = 'local'
     }
 
+    withName: BOLTZ_PULLDOWN_REPORTING {
+        executor = 'local'
+    }
+
     withName: MMSEQS_COLABFOLDSEARCH {
         time = 4.hours
         memory = '32g'
