--- a/conf/platforms/m3.config
+++ b/conf/platforms/m3.config
@@ -128,6 +128,10 @@ process {
         executor = 'local'
     }
 
+    withName: BOLTZ_PULLDOWN_REPORTING {
+        executor = 'local'
+    }
+
     withName: MMSEQS_COLABFOLDSEARCH {
         // comp partition
         clusterOptions = '--partition=comp' + (params.slurm_account ? " --account=${params.slurm_account} " : '')
