--- a/conf/platforms/m3_bdi.config
+++ b/conf/platforms/m3_bdi.config
@@ -134,6 +134,10 @@ process {
         executor = 'local'
     }
 
+    withName: BOLTZ_PULLDOWN_REPORTING {
+        executor = 'local'
+    }
+
     withName: MMSEQS_COLABFOLDSEARCH {
         clusterOptions = "--partition=comp ${account_option}"
         time = 4.hours
