--- a/conf/platforms/mlerp.config
+++ b/conf/platforms/mlerp.config
@@ -119,6 +119,10 @@ process {
         executor = 'local'
     }
 
+    withName: BOLTZ_PULLDOWN_REPORTING {
+        executor = 'local'
+    }
+
     withName: MMSEQS_COLABFOLDSEARCH {
         clusterOptions = '--partition=BigCats --qos=panther'
         time = 4.hours
