--- a/nextflow.config
+++ b/nextflow.config
@@ -42,6 +42,10 @@ process {
     withName: COMBINE_SCORES {
         executor = 'local'
     }
+    
+    withName: BOLTZ_PULLDOWN_REPORTING {
+        executor = 'local'
+    }
 
     withName: RFDIFFUSION {
         accelerator = 1
