MLeRP config tweak for ProteinMPNN resource allocation

--- a/conf/platforms/mlerp.config
+++ b/conf/platforms/mlerp.config
@@ -81,16 +81,24 @@ process {
     withName: DL_BINDER_DESIGN_PROTEINMPNN {
         //container = params.containers.dl_binder_design_proteinmpnn
 
-        // CPU only on MLeRP
-        clusterOptions = '--partition=BigCats --qos=panther'
-        time = 30.minutes
+        // CPU only on MLeRP - there is not substantial benefit to using more than 1 CPU 
+        // clusterOptions = '--partition=BigCats --qos=panther'
+        // time = 30.minutes
+        // memory = '4g'
+        // cpus = 1
 
-        // Since this is effectively CPU only and quick, we probably can also just
-        // run it on the local node
-        //executor = 'local'
+        // Although a GPU doesn't speed up ProteinMPNN-FastRelax much (if at all),
+        // the MLeRP node configuration means this allows more jobs to run in parallel.
+        // If the BigCats 3g.20gb slices are all busy, you may be better off with 
+        // using only the BigCats/panther CPU-only qos (above).
+        accelerator = 1
+        clusterOptions = { random_choice(['--gres=gpu:3g.20gb:1 --partition=BigCats --qos=cheetah', 
+                                          '--partition=BigCats --qos=panther']) }
+        time = 30.minutes
 
         memory = '4g'
         cpus = 1
+
     }
 
     withName: AF2_INITIAL_GUESS {
