hyperqueue.config - additional resource definitions for BOLTZ_*

--- a/conf/platforms/hyperqueue.config
+++ b/conf/platforms/hyperqueue.config
@@ -82,6 +82,22 @@ process {
         cpus = 2
     }
 
+    withName: BOLTZ_COMPARE_COMPLEX {
+        clusterOptions = "--resource gpus/nvidia=1"
+        accelerator = null
+        time = 2.hours
+        memory = '8g'
+        cpus = 2
+    }
+
+    withName: BOLTZ_COMPARE_BINDER_MONOMER {
+        clusterOptions = "--resource gpus/nvidia=1"
+        accelerator = null
+        time = 2.hours
+        memory = '8g'
+        cpus = 2
+    }
+
     withName: BINDCRAFT_CREATE_SETTINGS {
         executor = 'local'
     }
