boltzgen: Replace custom merging script with in-built boltzgen merge command
Run BOLTZGEN_ANALYSIS before BOLTZGEN_MERGE. This is required by `boltzgen merge` and has the desirable side effect of allowing many small parallel BOLTZGEN_ANALYSIS rather than one long BOLTZGEN_ANALYSIS job.

--- a/conf/platforms/mlerp.config
+++ b/conf/platforms/mlerp.config
@@ -245,7 +245,7 @@ process {
     }
 
     withName: BOLTZGEN_ANALYSIS {
-        time = 12.hours
+        time = 30.minutes
         memory = '64g'
         cpus = 8
         clusterOptions = '--gres=gpu:40gb:1 --partition=BigCats --qos=lion'
