--- a/conf/platforms/rotibom_hyperqueue.config
+++ b/conf/platforms/rotibom_hyperqueue.config
@@ -146,7 +146,7 @@ process {
 
     withName: BOLTZGEN_ANALYSIS {
         accelerator = null
-        time = 12.hours
+        time = 30.minutes
         memory = '64g'
         cpus = 8
         clusterOptions = "--resource gpus/nvidia=1"
