--- a/nextflow.config
+++ b/nextflow.config
@@ -150,8 +150,8 @@ process {
 
     withName: BOLTZGEN_ANALYSIS {
         accelerator = 1
-        time = 4.hours
-        memory = '32g'  // '8g' ?
+        time = 30.minutes
+        memory = '8g' // '32g' // ?
         cpus = 2
     }
 
