--- a/conf/platforms/hyperqueue.config
+++ b/conf/platforms/hyperqueue.config
@@ -151,7 +151,7 @@ process {
 
     withName: BOLTZGEN_ANALYSIS {
         accelerator = null
-        time = 12.hours
+        time = 30.minutes
         memory = '64g'
         cpus = 8
         clusterOptions = "--resource gpus/nvidia=1"
