Add GPU utilization via the --enable_gpu_stats flag
Log is output to results/logs/gpu_stats.csv.gz

--- a/nextflow.config
+++ b/nextflow.config
@@ -14,6 +14,8 @@ params {
     require_gpu = true
     gpu_devices = ''
     gpu_allocation_detect_process_regex = '(python.*/app/dl_binder_design/af2_initial_guess/predict\\.py|python.*/app/BindCraft/bindcraft\\.py|boltz predict|python.*/app/RFdiffusion/scripts/run_inference\\.py)'
+    enable_gpu_stats = false
+    gpu_stats_interval = 5
 }
 
 process {
