Restructure workflows into workflows/ launched by main.nf --method option

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -9,6 +9,7 @@ nav:
       - Boltz Pulldown: workflows/boltz-pulldown.md
   - Extra:
       - Utility Scripts: extra/utility-scripts.md
+  - Release history: changelog.md
 
 plugins:
   - search
